--- a/index.html
+++ b/index.html
@@ -6,17 +6,36 @@
 </head>
 <body>
 <h2>my name is mudd</h2>
-<img src="" alt="">
-<ul>
-  <li><strong>Email:</strong> <a href=""</a></a>li>
+<img src="images/hi.jpg" alt="hello world" width="400" height="225">
+<p>Lorem ipsum</p><br>
 
-  </li>
+<ul>
+    <li><strong>Email:</strong> bradjmarchant@gmail.com </li>
+    <li><strong>Bat Phone:</strong> 555-555-5555 </li>
+    <li><strong>link:</strong> linkedin.com </li>
+  
 </ul>
 
 <table>
-<tr>
-  
-</tr>
+    <head>
+        <tr>
+            <th>Movie</th>
+            <th>Song</th>
+            <th>Book</th>
+          </tr>
+    </head>
+    <body>
+        <tr>
+        <td>Dark Knight</td>
+        <td>Empire</td>
+        <td>DUNE</td>
+        </tr>
+        <tr>
+            <td>Arrival</td>
+            <td>Monster Mash</td>
+            <td>LOTR</td>
+            </tr>
+    </body>
 
 </table>
 
